AUTOMAKE_OPTIONS =	foreign

pixmaps_DATA =	arrdown2.xpm arrows2.xpm arrup2.xpm bomb.xpm clamp.xpm	\
	datebook.xpm desk.xpm dialog_box.xpm editres.xpm eps.xpm	\
	flow_chart.xpm folder2.xpm folders.xpm fvwm.xpm fvwm2.xpm	\
	graphs.xpm mag_glass.xpm mail1.xpm mail2.xpm map.xpm math4.xpm	\
	page.xpm page2.xpm ps.xpm question.xpm rbomb.xpm rcalc.xpm	\
	rterm.xpm term.xpm tiff2.xpm toolbox.xpm unknown1.xpm		\
	wierd_page3.xpm word_processor.xpm xcalc.xpm xman.xpm		\
	xterm-axp.xpm xterm-blank.xpm xterm-dec.xpm xterm-sgi.xpm	\
	xterm-sol.xpm xterm-sun.xpm xterm.xpm
