AUTOMAKE_OPTIONS =	foreign

if USE_XPM
XPM_SUBDIRS = FvwmBanner 
endif

SUBDIRS = $(XPM_SUBDIRS) \
          GoodStuff \
          FvwmIdent \
          FvwmBacker \
          FvwmDebug \
	  FvwmClean \
          FvwmPager \
	  FvwmAudio \
          FvwmScroll \
          FvwmIconBox \
          FvwmSave \
          FvwmSaveDesk \
          FvwmAuto \
          FvwmWinList
