FvwmWinList_LDADD =	-L../../libs -lfvwmlib
FvwmWinList_DEPENDENCIES =	../../libs/libfvwmlib.a
FvwmWinList_SOURCES =	ButtonArray.c Colors.c FvwmWinList.c List.c Mallocs.c
noinst_HEADERS =	ButtonArray.h Colors.h FvwmWinList.h List.h Mallocs.h

libexec_PROGRAMS =	FvwmWinList
man1_MANS =		FvwmWinList.man
